@@ -243,15 +243,18 @@
           y += step_y;
 
           if ( Y_TOO_LONG( y, size, display ) )
+          {
+            FT_Done_Glyph( glyph );
             break;
+          }
         }
 
         error = FTDemo_Draw_Glyph( handle, display, glyph, &x, &y );
 
+        FT_Done_Glyph( glyph );
+
         if ( error )
           goto Next;
-
-        FT_Done_Glyph( glyph );
 
         if ( !have_topleft )
         {
